[Frontend] Fixed up index view, added blurred background image

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,26 +1,248 @@
 body {
-	max-width: 80rem;
-	padding: 50px;
-	font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+	font: 14px Helvetica, Arial, sans-serif;
+	background-color: rgb(76, 76, 76);
+	height: 100vh;
+	max-height: 100vh;
+	margin: 0;
 }
 
 a {
-  	color: #00B7FF;
+	text-decoration: none;
+	color: black;
+}
+
+a:hover {
+	text-decoration: none;
+	color: black;
+}
+
+.nav-bar {
+	background-color: rgba(16, 185, 129, 1);
+	border-bottom-width: 1px;
+	border-color: rgb(243, 244, 246);
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 2;
+	width: 100%
+}
+
+.nav-bar-content {
+	max-width: 80rem;
+	margin-right: auto;
+	margin-left: auto;
+	display: flex;
+	height: 4rem;
+	align-items: center;
+	padding-right: 2rem;
+	padding-left: 2rem;
+}
+
+.index-background {
+	background-image: url("/images/background.jpg");
+	height: 100%;
+	width: 100%;
+	filter: blur(4px);
+  	-webkit-filter: blur(4px);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.index-card {
+	border-radius: 0.5rem;
+	box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.5);
+	padding-top: 1rem;
+	padding-bottom: 4rem;
+	border: black 1px solid;
+	background-color: white;
+	display: flex;
+	flex-direction: column;
+	height: 250px;
+	width: 700px;
+	align-items: center;
+	position: absolute;
+	top: 40%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	z-index: 2;
+}
+
+form {
+	display: flex;
+	align-items: center;
+	width: 70%;
+	margin-bottom: 1rem;
+}
+
+.form-control {
+	padding-top: 0.25rem;
+	padding-bottom: 0.25rem;
+	padding-left: 1rem;
+	padding-right: 1rem;
+	border-radius: 0.5rem;
+	border: black 1px solid;
+	font-size: 16px;
+	width: 70%;
+}
+
+.button {
+	padding-top: 0.25rem;
+	padding-bottom: 0.25rem;
+	padding-left: 1rem;
+	padding-right: 1rem;
+	border-radius: 0.5rem;
+	border: rgba(16, 185, 129, 1) 1px solid;
+	margin-left: 1rem;
+	background-color: rgba(16, 185, 129, 1);
+	color: white;
+}
+
+.button:hover {
+	padding-top: 0.25rem;
+	padding-bottom: 0.25rem;
+	padding-left: 1rem;
+	padding-right: 1rem;
+	border-radius: 0.5rem;
+	margin-left: 1rem;
+	background-color: rgba(6, 95, 70, 1);
+	color: white;
+}
+
+.title-a {
+	color: white;
+	font-size:24px;
+}
+
+.title-a:hover {
+	color: white;
+	text-decoration: none !important;
+}
+
+.nav-link {
+	color: white;
+	font-size:18px;
+	margin-left: 2rem;
 }
 
 .container {
-	background-color: #e6e6e6;
-	padding: 2rem;
+	background-color: rgba(243, 244, 246, 1);
+	padding-top: 1rem;
+	padding-right: 4rem;
+	padding-bottom: 2rem;
+	padding-left: 4rem;
+	max-width: 80rem;
+	margin-right: auto;
+	margin-left: auto;
+}
+
+.text-white {
+	color: white;
+}
+
+.result-content {
+	display: flex;
+	flex-wrap: wrap;
+	margin-right: 4rem;
+	margin-left: 4rem;
+}
+
+.card {
+	border-radius: 0.5rem;
+	box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.5);
+	padding: 1rem;
+	margin-bottom: 2rem;
+	margin-right: auto;
+	margin-left: auto;
+	border: black 1px solid;
+	background-color: white;
+	display: flex;
+	width: 100%;
+	align-items: center;
+}
+
+.card:hover {
+	background-color: rgba(110, 231, 183, 1);
+}
+
+.card-heading {
+	margin-left: 2rem;
+	margin-bottom: 0.5rem;
+	font-size: 24px;
+	font-weight: 500;
+}
+
+.card-subheading {
+	margin-left: 2rem;
+	margin-bottom: 0.5rem;
+	font-size: 16px;
+}
+
+.card-subheading span{
+	margin-right: 2rem;
+}
+
+.card-image {
+	height: 100px;
+	width: 100px;
+	background-color: white;
+	border-radius: 0.5rem;
+}
+
+.card-genre {
+	margin-left: 2rem;
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.genre {
+	margin-right: 1rem;
+	margin-bottom: 0.5rem;
+	padding-top: 0.5rem;
+	padding-bottom: 0.5rem;
+	padding-right: 1rem;
+	padding-left: 1rem;
+	background-color: rgba(67, 56, 202, 1);
+	color: white;
+	border-radius: 0.5rem;
+}
+
+.track-artists {
+	margin-left: 2rem;
+	margin-bottom: 0.5rem;
+	font-size: 16px;
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+}
+
+.track-artists span{
+	margin-right: 2rem;
+}
+
+.track-artist {
+	margin-right: 1rem;
+	margin-top: 0.5rem;
+	margin-bottom: 0.5rem;
+	padding-top: 0.5rem;
+	padding-bottom: 0.5rem;
+	padding-right: 1rem;
+	padding-left: 1rem;
+	background-color: rgba(239, 68, 68, 1);
+	color: white;
+	border-radius: 0.5rem;
 }
 
 .artist-image {
 	height: 100px;
 	width: 100px;
 	background-color: white;
+	border-radius: 0.5rem;
 }
 
 .track-image {
 	height: 100px;
 	width: 100px;
 	background-color: white;
+	border-radius: 0.5rem;
 }
